4B/cs444/tests/site/pass/pass_implicitthisforfields.joos
/* pass: implicit this for fields */
public class A {
  public A() {}
  protected int x;
  public int m() {
    return x;
  }
}

