4B/cs444/tests/site/fail/fail_unaryplus.joos
/* fail: unary plus */
public class A {
  public int m(int x) {
    return +x; 
  }
}

